# pandoc_plantuml_filter_panflute

./: .gitignore  pyproject.toml
pandoc_plantuml_filter_panflute/: __init__.py  __main__.py  filter.py
